# Aven-rs

./: Cargo.toml  README.md
.github/workflows/: validate.yml
application/: Cargo.toml
application/src/: application.rs  connection.rs  error.rs  lib.rs  shard.rs
core/: Cargo.toml
core/src/: application.rs  lib.rs
core/src/models/: member.rs  mod.rs
executor/: Cargo.toml
executor/src/: lib.rs
gateway/: Cargo.toml
gateway/src/: error.rs  events.rs  lib.rs  packet.rs  shard.rs  websocket.rs
gateway/src/models/: dispatch.rs  hello.rs  identify.rs  mod.rs  op_codes.rs  packet.rs  properties.rs  tests.rs
gateway/src/models/components/: mod.rs  properties.rs  token.rs
http/: Cargo.toml
http/src/: error.rs  http.rs  lib.rs  packet.rs  packets.rs  tests.rs
models/: Cargo.toml
models/src/: lib.rs  member.rs  message.rs  user.rs
src/: lib.rs  prelude.rs
