[package]
name = "aven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"aven-application" = { version = "*", path = "application" }
"aven-models" = { version = "*", path = "models" }

[workspace]

members = ["executor", "application", "models", "gateway"]
