[package]
name = "aven-application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aven-executor = { version = "*", path = "../executor" }
aven-models = { version = "*", path = "../models" }

reqwest = { version = "0.11.12", features = [] }
